--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   speech_to_text: ^6.1.1
   flutter_tts: ^3.6.3
   permission_handler: ^10.2.0
+  dotted_line: ^3.1.0
 
 dev_dependencies:
   flutter_test:
