--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_tts: ^3.6.3
   permission_handler: ^10.2.0
   dotted_line: ^3.1.0
+  flutter_quill: ^6.4.4
 
 dev_dependencies:
   flutter_test:
